KUBE/ingress-projects/awesome-3/react-java-mysql/kube/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: awesome-3
spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: qamre/awsome4-frontend-backend-db:frontend-v1
          ports:
            - containerPort: 80
