KUBE/ingress-projects/awesome-3/react-java-mysql/kube/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: awesome-3
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8080
