KUBE/ingress-projects/awesome-3/react-java-mysql/kube/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: awesome-3
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
