KUBE/ingress-projects/awesome-3/react-java-mysql/kube/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: awesome-3
spec:
  selector:
    app: mysql

  ports:
    - name: mysql
      port: 3306
      targetPort: 3306

  type: ClusterIP
