KUBE/ingress-projects/awesome-3/react-java-mysql/kube/ingress-bkp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: awesome-3
spec:
  ingressClassName: nginx

  rules:
    - host: app3.myapp3.local
      http:
        paths:

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
